--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,12 +3,19 @@ background-color: darkblue;
 padding: 10px;
 }
 nav a {
+    background-color: steelblue;
     color: white;
-    display: block;
-    padding: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.2rem;
 }
 h1 {
     color: darkblue;
+    border-bottom: #000;
 }
 img {
     width: 150px;
@@ -45,4 +52,21 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+header, .grid, footer {
+    display: grid;
+    align-items: center;
+}
+
+main{
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside{
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
