--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
 nav {
-background-color: darkblue;
-padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #8571b4;
+    padding: 10px;
 }
 nav a {
     background-color: steelblue;
@@ -27,9 +30,7 @@ img {
 p {
     padding: 10px;
 }
-main {
- max-width: 840px;   
-}
+
 aside{
     width: 20rem;
     margin: 1rem;
@@ -49,12 +50,14 @@ main img {
 }
 p { padding: 0;}
 footer {
-    margin-top: 15px;
+    
     border-top: 1px solid #000;
     text-align: center;
 }
 
 header, .grid, footer {
+    max-width: 100%;
+    margin: 0% auto;
     display: grid;
     align-items: center;
 }
