--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,17 +2,18 @@ nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #8571b4;
+    background-color: hsl(258, 88%, 36%);
     padding: 10px;
 }
 nav a {
-    background-color: steelblue;
-    color: white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0.5rem;
+    display: block;
+    padding: 10px;
     text-decoration: none;
+    color: #333;
+}
+nav a:hover {
+    background-color: #ddd;
+    color: white;
     font-weight: 700;
     font-size: 1.2rem;
 }
@@ -37,7 +38,7 @@ aside{
     border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
     padding: 1rem;
     background-color: #eee;
-    color: #333;
+    color: ee;
     text-align: center;
 }
 aside img {
@@ -51,8 +52,9 @@ main img {
 p { padding: 0;}
 footer {
     
-    border-top: 1px solid #000;
+    border-top: 1px solid #333;
     text-align: center;
+    padding: 10px;
 }
 
 header, .grid, footer {
