--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,15 @@
 nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    background-color: hsl(258, 88%, 36%);
+    background-color: hsl(257, 9%, 71%);
     padding: 10px;
 }
 nav a {
     display: block;
     padding: 10px;
     text-decoration: none;
-    color: #333;
+    color: #eee;
 }
 nav a:hover {
     background-color: #ddd;
@@ -20,6 +20,8 @@ nav a:hover {
 h1 {
     color: darkblue;
     border-bottom: #000;
+    border-bottom: 2px solid #333;
+    padding-bottom: 10px;
 }
 img {
     width: 150px;
@@ -38,7 +40,7 @@ aside{
     border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
     padding: 1rem;
     background-color: #eee;
-    color: ee;
+    color: #000ee;
     text-align: center;
 }
 aside img {
@@ -51,7 +53,7 @@ main img {
 }
 p { padding: 0;}
 footer {
-    
+    width: 200px;
     border-top: 1px solid #333;
     text-align: center;
     padding: 10px;
@@ -67,11 +69,45 @@ header, .grid, footer {
 main{
     grid-column: 2/3;
     margin: 1rem;
+    width: 840px;
+    align-items:center;
+}
+.box {
+    margin: 1rem;
+    border:1px solid rgba(0, 0, 0, 0.1);
+    padding: 1px;
+    background-color: #ddd;
+    color: #000;
 }
 
 aside{
     width: 20rem;
     position: relative;
-    grid-column: 1/2;
     grid-row: 1/2;
+}
+
+.grid{
+    display: grid;
+    align-items:center ;
+    grid-column:2;
+    gap: 20px;
+}
+
+header{
+    display: block;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box ;
+}
+aside{
+    grid-area: aside;
+}
+main{
+    grid-area: main;
+}
+body{
+    font-size: 20px;
+    font-family: roboto;
 }
